@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2000-2010, Thomas Maier-Komor
+ *  Copyright (C) 2000-2011, Thomas Maier-Komor
  *
  *  This is the source code of mbuffer.
  *
@@ -1315,7 +1315,7 @@ static void version(void)
 {
 	(void) fprintf(stderr,
 		"mbuffer version "VERSION"\n"\
-		"Copyright 2001-2010 - T. Maier-Komor\n"\
+		"Copyright 2001-2011 - T. Maier-Komor\n"\
 		"License: GPLv3 - see file LICENSE\n"\
 		"This program comes with ABSOLUTELY NO WARRANTY!!!\n"
 		"Donations via PayPal to thomas@maier-komor.de are welcome and support this work!\n"
@@ -1804,7 +1804,7 @@ int main(int argc, const char **argv)
 	}
 	if ((StartRead < 1) && (StartWrite > 0))
 		fatal("setting both low watermark and high watermark doesn't make any sense...\n");
-	if ((NumSenders > 0) && (Autoloader || OutVolsize))
+	if ((NumSenders-Hashers > 0) && (Autoloader || OutVolsize))
 		fatal("multi-volume support is unsupported with multiple outputs\n");
 	if (Autoloader) {
 		if ((!outfile) && (!Infile))
